# stock-price-prediction

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
conf/base/: catalog.yml  parameters.yml  parameters_hyperparameter_tuning.yml  parameters_model_training.yml  parameters_preprocessing.yml
notebooks/: lstm_model.keras  scaler.pkl  test_nodes.ipynb
src/api/: config.py  main.py  model_loader.py  schemas.py
src/stock_price_prediction/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/stock_price_prediction/pipelines/data_ingestion/: nodes.py  pipeline.py
src/stock_price_prediction/pipelines/hyperparameter_tuning/: __init__.py  nodes.py  pipeline.py
src/stock_price_prediction/pipelines/model_training/: nodes.py  pipeline.py
src/stock_price_prediction/pipelines/preprocessing/: __init__.py  nodes.py  pipeline.py
tests/pipelines/hyperparameter_tuning/: test_pipeline.py
tests/pipelines/preprocessing/: test_pipeline.py
